--- a/Prevu.Synoptics.V3510_Greentech_Romania/D810.xaml
+++ b/Prevu.Synoptics.V3510_Greentech_Romania/D810.xaml
@@ -8,13 +8,13 @@
              xmlns:Labels="clr-namespace:Prevu.UIComponents.Labels;assembly=Prevu.UIComponents" 
              mc:Ignorable="d" 
              d:Background="{DynamicResource MaterialDesignPaper}">
-    <Canvas Height="450" Width="320">
-        <Machines:Storage_silo Height="442" Width="323" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:SignalLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="810-61-LEV" SignalName="LSHA" Canvas.Left="201" Canvas.Top="48"/>
-        <Labels:DeviceLabel HorizontalAlignment="Center" 
+  <Canvas Height="450" Width="320">
+    <Machines:Storage_silo Height="442" Width="323" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Labels:SignalLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="810-61-LEV" SignalName="LSHA" Canvas.Left="207" Canvas.Top="48"/>
+    <Labels:DeviceLabel HorizontalAlignment="Center" 
 		VerticalAlignment="Center" 
-		ComponentName="810-61-LEV" Canvas.Left="29" Canvas.Top="39"/>
-        <Labels:DeviceLabel HorizontalAlignment="Center" 
-            ComponentName="810-41-WT1" Canvas.Left="29" Canvas.Top="94" VerticalAlignment="Top"/>
-    </Canvas>
+		ComponentName="810-01-MA1" Canvas.Left="29" Canvas.Top="39"/>
+    <Labels:DeviceLabel HorizontalAlignment="Center" 
+            ComponentName="810-41-WT1" Canvas.Left="29" Canvas.Top="171" VerticalAlignment="Top"/>
+  </Canvas>
 </UserControl>
