--- a/Prevu.Synoptics.V3510_Greentech_Romania/P810.xaml
+++ b/Prevu.Synoptics.V3510_Greentech_Romania/P810.xaml
@@ -266,6 +266,6 @@
         </TransformGroup>
       </Machines:VRC_WaterCollectingTank.RenderTransform>
     </Machines:VRC_WaterCollectingTank>
-    <Labels:DetailsLabel ComponentName="896-FILTER" DetailsPageName="D896" Canvas.Left="1187" Canvas.Top="151" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+    <Labels:DetailsLabel ComponentName="896-FILTER" DetailsPageName="D896" Canvas.Left="1181" Canvas.Top="151" HorizontalAlignment="Left" VerticalAlignment="Center"/>
   </Canvas>
 </UserControl>
