V2502 update per immagine VT_CMM

--- a/Prevu.Synoptics.V2502_Polymer_Processor/P510.xaml
+++ b/Prevu.Synoptics.V2502_Polymer_Processor/P510.xaml
@@ -309,7 +309,7 @@
         <Machines:DRY_HeatingBattery Height="65" Width="66" Canvas.Left="942" Canvas.Top="690" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Blowers:VT_CMM_BlowerAirCompressor Canvas.Left="959" Canvas.Top="571" Height="50" Width="50" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Blowers:VT_CMM_BlowerAirCompressor Canvas.Left="1257" Canvas.Top="698" Height="50" Width="50" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Blowers:VT_CMM_BlowerAirCompressor Canvas.Left="929" Canvas.Top="187" Height="50" Width="50" Color="Air" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Blowers:VT_CMM_BlowerAirCompressor Canvas.Left="929" Canvas.Top="187" Height="50" Width="50"  HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel HorizontalAlignment="Center" 
 		VerticalAlignment="Top" 
 		ComponentName="510-01-MA1" RenderTransformOrigin="0.567,-2.17" Canvas.Left="664" Canvas.Top="229"/>
