--- a/Prevu.Synoptics.V2502_Polymer_Processor/P520.xaml
+++ b/Prevu.Synoptics.V2502_Polymer_Processor/P520.xaml
@@ -231,7 +231,7 @@
         <Machines:DRY_HeatingBattery Height="65" Width="66" Canvas.Left="937" Canvas.Top="695" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Blowers:VT_CMM_BlowerAirCompressor Canvas.Left="954" Canvas.Top="576" Height="50" Width="50" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Blowers:VT_CMM_BlowerAirCompressor Canvas.Left="1252" Canvas.Top="703" Height="50" Width="50" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Blowers:VT_CMM_BlowerAirCompressor Canvas.Left="924" Canvas.Top="192" Height="50" Width="50" Color="Air" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Blowers:VT_CMM_BlowerAirCompressor Canvas.Left="924" Canvas.Top="192" Height="50" Width="50" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:Waste Height="56" Width="64" Canvas.Left="1006" Canvas.Top="226" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel HorizontalAlignment="Center" 
 		VerticalAlignment="Top" 
