--- a/Prevu.Synoptics.V2502_Polymer_Processor/P530.xaml
+++ b/Prevu.Synoptics.V2502_Polymer_Processor/P530.xaml
@@ -118,7 +118,7 @@
         </Labels:Pipe>
         <Blowers:VT_CMM_BlowerAirCompressor Canvas.Left="944" Canvas.Top="571" Height="50" Width="50" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Blowers:VT_CMM_BlowerAirCompressor Canvas.Left="1242" Canvas.Top="698" Height="50" Width="50" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Blowers:VT_CMM_BlowerAirCompressor Canvas.Left="914" Canvas.Top="187" Height="50" Width="50" HorizontalAlignment="Center" VerticalAlignment="Top" Color="Air"/>
+        <Blowers:VT_CMM_BlowerAirCompressor Canvas.Left="914" Canvas.Top="187" Height="50" Width="50" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Rectangle HorizontalAlignment="Center" Height="36" Stroke="Black" VerticalAlignment="Top" Width="2" RenderTransformOrigin="0.5,0.5" Canvas.Left="542" Canvas.Top="172">
             <Rectangle.RenderTransform>
                 <TransformGroup>
