V3168 aggiunta e correzzioni per pagina AirView

--- a/Prevu.Synoptics.V3168_Sirplaste/P810.xaml
+++ b/Prevu.Synoptics.V3168_Sirplaste/P810.xaml
@@ -62,7 +62,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="342" RenderTransformOrigin="0.5,0.5" StatusComponent="812-01-MA1" PipeHeight="Medium" Height="18" Canvas.Left="624" Canvas.Top="73">
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="261" RenderTransformOrigin="0.5,0.5" StatusComponent="812-01-MA1" PipeHeight="Medium" Height="18" Canvas.Left="705" Canvas.Top="73">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -72,7 +72,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="81" StatusComponent="812-01-MA1" PipeHeight="Medium" Height="22" Canvas.Left="552" Canvas.Top="527" />
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="160" StatusComponent="812-01-MA1" PipeHeight="Medium" Height="22" Canvas.Left="552" Canvas.Top="527" />
         <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="138" RenderTransformOrigin="0.5,0.5" StatusComponent="868-01-MA1" PipeHeight="Medium" Height="25" Canvas.Left="841" Canvas.Top="722" >
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -143,7 +143,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="466" StatusComponent="812-01-MA1" PipeHeight="Medium" Height="22" RenderTransformOrigin="0.5,0.5" Canvas.Left="395" Canvas.Top="299">
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="466" StatusComponent="812-01-MA1" PipeHeight="Medium" Height="22" RenderTransformOrigin="0.5,0.5" Canvas.Left="475" Canvas.Top="299">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -229,9 +229,9 @@
         <Labels:DeviceLabel HorizontalAlignment="Center" 
             VerticalAlignment="Top" 
             ComponentName="866-01-MA1" Canvas.Left="867" Canvas.Top="628" />
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-            VerticalAlignment="Center" 
-            ComponentName="812-01-MA1" Canvas.Left="479" Canvas.Top="477"/>
+        <Labels:DeviceLabel HorizontalAlignment="Center" 
+            VerticalAlignment="Top" 
+            ComponentName="812-01-MA1" Canvas.Left="479" Canvas.Top="467"/>
         <Labels:DeviceLabel HorizontalAlignment="Center" 
             VerticalAlignment="Top" 
             ComponentName="870-01-MA1" Canvas.Left="916" Canvas.Top="541" />
@@ -244,7 +244,7 @@
         <Labels:DeviceLabel 
             ComponentName="810-01-MA1" Canvas.Left="366" Canvas.Top="178" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel 
-            ComponentName="810-MIXER" Canvas.Left="459" Canvas.Top="247" HorizontalAlignment="Left" VerticalAlignment="Center"  />
+            ComponentName="810-SILO" Canvas.Left="459" Canvas.Top="247" HorizontalAlignment="Left" VerticalAlignment="Center"  />
         <Labels:DetailsLabel ComponentName="810-VIEW" DetailsPageName="D810" HideComponentName="True" Canvas.Left="554" Canvas.Top="247" HorizontalAlignment="Left" VerticalAlignment="Center" />
         <Labels:DeviceLabel 
             ComponentName="868-01-MA1" Canvas.Left="665" Canvas.Top="653" HorizontalAlignment="Center" VerticalAlignment="Top" />
