--- a/Prevu.Synoptics.V3168_Sirplaste/PlantView.xaml
+++ b/Prevu.Synoptics.V3168_Sirplaste/PlantView.xaml
@@ -11,8 +11,8 @@
              lex:ResxLocalizationProvider.DefaultAssembly="Prevu.Localization"
              lex:ResxLocalizationProvider.DefaultDictionary="Resources"             
              mc:Ignorable="d" 
-             d:Height="850" d:Width="1700" d:Background="{DynamicResource MaterialDesignPaper}">
-    <Canvas>
+             d:Height="600" d:Width="1700" d:Background="{DynamicResource MaterialDesignPaper}">
+    <Canvas Height="600" Width="1700">
         <Labels:Pipe Width="70" RenderTransformOrigin="0.5,0.5" StatusComponent="220-01-MA1" Canvas.Left="409" Canvas.Top="340" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:Pipe Width="71" RenderTransformOrigin="0.5,0.5" StatusComponent="237-01-MA1" Canvas.Left="494" Canvas.Top="340" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:Pipe Width="121" RenderTransformOrigin="0.5,0.5" StatusComponent="292-01-MA1" Canvas.Left="594" Canvas.Top="333" HorizontalAlignment="Center" VerticalAlignment="Center" Text="&gt;"/>
