V3168 update viste Aria e Acqua

--- a/Prevu.Synoptics.V3168_Sirplaste/WaterView.xaml
+++ b/Prevu.Synoptics.V3168_Sirplaste/WaterView.xaml
@@ -287,35 +287,25 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Border BorderThickness="1" Height="86" Width="247" Background="Gray" CornerRadius="15,15,15,15" Canvas.Left="447" Canvas.Top="151" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Border BorderThickness="1" Height="86" Width="247" Background="Gray" CornerRadius="15,15,15,15" Canvas.Left="1057" Canvas.Top="152" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Border BorderThickness="1" Height="86" Width="246" Background="Gray" CornerRadius="15,15,15,15" Canvas.Left="758" Canvas.Top="151" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Border BorderThickness="1" Height="86" Width="246" Background="Gray" CornerRadius="15,15,15,15" Canvas.Left="1383" Canvas.Top="152" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Border BorderThickness="1" Height="86" Width="247" Background="Gray" CornerRadius="15,15,15,15" Canvas.Left="1383" Canvas.Top="387" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Border BorderThickness="1" Height="86" Width="246" Background="Gray" CornerRadius="15,15,15,15" Canvas.Left="125" Canvas.Top="387" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Border BorderThickness="1" Height="86" Width="247" Background="Gray" CornerRadius="15,15,15,15" Canvas.Left="456" Canvas.Top="602" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Border BorderThickness="1" Height="86" Width="248" Background="Gray" CornerRadius="15,15,15,15" Canvas.Left="761" Canvas.Top="387" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Border BorderThickness="1" Height="86" Width="247" Background="Gray" CornerRadius="15,15,15,15" Canvas.Left="124" Canvas.Top="151" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Border BorderThickness="1" Height="86" Width="247" Background="Gray" CornerRadius="15,15,15,15" Canvas.Left="447" Canvas.Top="151" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Border BorderThickness="1" Height="86" Width="247" Background="Gray" CornerRadius="15,15,15,15" Canvas.Left="1057" Canvas.Top="152" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Border BorderThickness="1" Height="86" Width="246" Background="Gray" CornerRadius="15,15,15,15" Canvas.Left="758" Canvas.Top="151" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Border BorderThickness="1" Height="86" Width="246" Background="Gray" CornerRadius="15,15,15,15" Canvas.Left="1383" Canvas.Top="152" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Border BorderThickness="1" Height="86" Width="247" Background="Gray" CornerRadius="15,15,15,15" Canvas.Left="1383" Canvas.Top="387" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Border BorderThickness="1" Height="86" Width="246" Background="Gray" CornerRadius="15,15,15,15" Canvas.Left="125" Canvas.Top="387" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Border BorderThickness="1" Height="86" Width="247" Background="Gray" CornerRadius="15,15,15,15" Canvas.Left="447" Canvas.Top="602" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Border BorderThickness="1" Height="86" Width="248" Background="Gray" CornerRadius="15,15,15,15" Canvas.Left="757" Canvas.Top="387" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Border BorderThickness="1" Height="86" Width="247" Background="Gray" CornerRadius="15,15,15,15" Canvas.Left="124" Canvas.Top="151" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         <TextBlock TextWrapping="Wrap" TextAlignment="Center" FontSize="24" Foreground="Black" FontWeight="Bold" Text="Grinder" Canvas.Left="528" Canvas.Top="178" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <TextBlock TextWrapping="Wrap" TextAlignment="Center" FontSize="24" Foreground="Black" FontWeight="Bold" Text="Washing" Canvas.Left="1132" Canvas.Top="179" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <TextBlock TextWrapping="Wrap" TextAlignment="Center" FontSize="24" Foreground="Black" FontWeight="Bold" Text="Reactors" Canvas.Left="833" Canvas.Top="178" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <TextBlock TextWrapping="Wrap" TextAlignment="Center" FontSize="24" Foreground="Black" FontWeight="Bold" Text="Separation" Canvas.Left="1445" Canvas.Top="179" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <TextBlock TextWrapping="Wrap" TextAlignment="Center" FontSize="24" Foreground="Black" FontWeight="Bold" Text="Separation Recovery" Canvas.Left="1442" Canvas.Top="398" HorizontalAlignment="Left" VerticalAlignment="Center" Width="129"/>
-        <TextBlock TextWrapping="Wrap" TextAlignment="Center" FontSize="24" Foreground="Black" FontWeight="Bold" Text="Filtration" Canvas.Left="528" Canvas.Top="629" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <TextBlock TextWrapping="Wrap" TextAlignment="Center" FontSize="24" Foreground="Black" FontWeight="Bold" Text="Separation" Canvas.Left="1446" Canvas.Top="179" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <TextBlock TextWrapping="Wrap" TextAlignment="Center" FontSize="24" Foreground="Black" FontWeight="Bold" Text="Separation Recovery" Canvas.Left="1443" Canvas.Top="398" HorizontalAlignment="Left" VerticalAlignment="Center" Width="129"/>
+        <TextBlock TextWrapping="Wrap" TextAlignment="Center" FontSize="24" Foreground="Black" FontWeight="Bold" Text="Filtration" Canvas.Left="519" Canvas.Top="629" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <TextBlock TextWrapping="Wrap" TextAlignment="Center" FontSize="24" Foreground="Black" FontWeight="Bold" Text="Hot Wash" Canvas.Left="829" Canvas.Top="414" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <TextBlock TextWrapping="Wrap" TextAlignment="Center" FontSize="24" Foreground="Black" FontWeight="Bold" Text="Prewash" Canvas.Left="200" Canvas.Top="178" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <TextBlock TextWrapping="Wrap" TextAlignment="Center" FontSize="24" Foreground="Black" FontWeight="Bold" Text="Prewash Recovery" Canvas.Left="183" Canvas.Top="398" Width="130" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:WaterPump Canvas.Left="469" Canvas.Top="243" Height="40" Width="40" Color="Water" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center">
-            <Machines:WaterPump.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Machines:WaterPump.RenderTransform>
-        </Machines:WaterPump>
-        <Machines:WaterPump Canvas.Left="137" Canvas.Top="242" Height="40" Width="40" Color="Water" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Machines:WaterPump.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -381,16 +371,6 @@
                     <ScaleTransform/>
                     <SkewTransform/>
                     <RotateTransform Angle="270"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Machines:WaterPump.RenderTransform>
-        </Machines:WaterPump>
-        <Machines:WaterPump Canvas.Left="1088" Canvas.Top="251" Height="40" Width="40" Color="Water" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center">
-            <Machines:WaterPump.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="90"/>
                     <TranslateTransform/>
                 </TransformGroup>
             </Machines:WaterPump.RenderTransform>
@@ -465,6 +445,15 @@
                 </TransformGroup>
             </Machines:CV_Valve.RenderTransform>
         </Machines:CV_Valve>
+        <Labels:GroupLabel GroupName="210" Canvas.Left="126" Canvas.Top="166" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:GroupLabel GroupName="288" Canvas.Left="126" Canvas.Top="402" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:GroupLabel GroupName="230" Canvas.Left="449" Canvas.Top="166" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:GroupLabel GroupName="288" Canvas.Left="449" Canvas.Top="618" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:GroupLabel GroupName="330" Canvas.Left="760" Canvas.Top="166" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:GroupLabel GroupName="350" Canvas.Left="759" Canvas.Top="402" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:GroupLabel GroupName="350" Canvas.Left="1059" Canvas.Top="166" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:GroupLabel GroupName="430" Canvas.Left="1385" Canvas.Top="166" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:GroupLabel GroupName="430" Canvas.Left="1385" Canvas.Top="402" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     </Canvas>
 
 </UserControl>
