V2502 aggiunta vista acqua e aggiornamenti generali

--- a/Prevu.Synoptics.V2502_Polymer_Processor/P210.xaml
+++ b/Prevu.Synoptics.V2502_Polymer_Processor/P210.xaml
@@ -132,7 +132,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Color="Water" Width="422" RenderTransformOrigin="0.5,0.5" Height="6" StatusComponent="210-71-ECS1" VisibilitySignal="" d:Row="1" VisibilityComponent="" HorizontalAlignment="Center" Canvas.Left="140" Canvas.Top="239" VerticalAlignment="Top">
+        <Labels:Pipe Color="Water" Width="422" RenderTransformOrigin="0.5,0.5" Height="6" StatusComponent="210-71-ECS1" VisibilitySignal=""  VisibilityComponent="" HorizontalAlignment="Center" Canvas.Left="140" Canvas.Top="239" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="0.859" ScaleY="1.164"/>
