--- a/Prevu.Synoptics.V2502_Polymer_Processor/P430.xaml
+++ b/Prevu.Synoptics.V2502_Polymer_Processor/P430.xaml
@@ -120,7 +120,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="134" RenderTransformOrigin="0.5,0.5" StatusComponent="430-04-MA1" VisibilityComponent="" Canvas.Left="808" Canvas.Top="485">
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Water" Width="130" RenderTransformOrigin="0.5,0.5" StatusComponent="430-04-MA1" VisibilityComponent="" Canvas.Left="810" Canvas.Top="487">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -236,7 +236,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="ByProduct" Width="41" RenderTransformOrigin="0.5,0.5" StatusComponent="440-01-MA1" Canvas.Left="689" Canvas.Top="563">
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="ByProduct" Width="43" RenderTransformOrigin="0.5,0.5" StatusComponent="440-01-MA1" Canvas.Left="688" Canvas.Top="564">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -287,8 +287,8 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Separation:VSP_SeparationTank_wMotorsAndScrew HorizontalAlignment="Left" Width="392" Canvas.Left="661" Canvas.Top="197" VerticalAlignment="Center"/>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="90" Color="Water" StatusComponent="430-04-MA1" VisibilityComponent="" Canvas.Left="873" Canvas.Top="420"/>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="68" Color="Water" StatusComponent="430-03-MA1" VisibilityComponent="" Canvas.Left="777" Canvas.Top="423"/>
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="90" Color="Water" StatusComponent="430-04-MA1" VisibilityComponent="" Canvas.Left="873" Canvas.Top="423"/>
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="68" Color="Water" StatusComponent="430-03-MA1" VisibilityComponent="" Canvas.Left="777" Canvas.Top="423"/>
         <Machines:CV_Valve_001 HorizontalAlignment="Left" VerticalAlignment="Center" Height="100" Width="100" Color="Water" RenderTransformOrigin="0.51,0.539" Canvas.Left="296" Canvas.Top="223">
             <Machines:CV_Valve_001.RenderTransform>
                 <TransformGroup>
@@ -319,7 +319,7 @@
                 </TransformGroup>
             </Machines:WaterPump.RenderTransform>
         </Machines:WaterPump>
-        <Machines:WaterPump HorizontalAlignment="Left" VerticalAlignment="Center" Height="72" Width="50" RenderTransformOrigin="0.5,0.5" Color="Water" Canvas.Left="925" Canvas.Top="387">
+        <Machines:WaterPump HorizontalAlignment="Center" VerticalAlignment="Top" Height="72" Width="50" RenderTransformOrigin="0.5,0.5" Color="Water" Canvas.Left="925" Canvas.Top="389">
             <Machines:WaterPump.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="-1"/>
@@ -329,7 +329,7 @@
                 </TransformGroup>
             </Machines:WaterPump.RenderTransform>
         </Machines:WaterPump>
-        <Machines:WaterPump HorizontalAlignment="Left" VerticalAlignment="Center" Height="72" Width="50" RenderTransformOrigin="0.5,0.5" Color="Water" Canvas.Left="735" Canvas.Top="389">
+        <Machines:WaterPump HorizontalAlignment="Center" VerticalAlignment="Center" Height="72" Width="50" RenderTransformOrigin="0.5,0.5" Color="Water" Canvas.Left="735" Canvas.Top="389">
             <Machines:WaterPump.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="-1"/>
@@ -341,8 +341,8 @@
         </Machines:WaterPump>
         <Machines:VB_VibratingScreen HorizontalAlignment="Left" VerticalAlignment="Center" Canvas.Left="1138" Canvas.Top="549"/>
         <Machines:VB_VibratingScreen HorizontalAlignment="Left" VerticalAlignment="Center" Canvas.Left="807" Canvas.Top="535"/>
-        <Machines:Waste HorizontalAlignment="Left" VerticalAlignment="Center" Height="46" Width="44" Canvas.Left="1274" Canvas.Top="579"/>
-        <Machines:Waste HorizontalAlignment="Left" VerticalAlignment="Center" Height="46" Width="44" Canvas.Left="688" Canvas.Top="569"/>
+        <Machines:Waste HorizontalAlignment="Center" VerticalAlignment="Top" Height="46" Width="44" Canvas.Left="1273" Canvas.Top="578"/>
+        <Machines:Waste HorizontalAlignment="Center" VerticalAlignment="Center" Height="46" Width="45" Canvas.Left="687" Canvas.Top="569"/>
         <Machines:VRC_WaterCollectingTank HorizontalAlignment="Left" VerticalAlignment="Center" Height="97" Width="172" Canvas.Left="707" Canvas.Top="707"/>
         <Machines:CV_ValvolaGhigliottina HorizontalAlignment="Left" VerticalAlignment="Center" Height="22" Width="114" Canvas.Left="357" Canvas.Top="425"/>
         <Machines:Waste HorizontalAlignment="Left" VerticalAlignment="Center" Height="60" Width="62" Canvas.Left="421" Canvas.Top="542"/>
