--- a/Prevu.Synoptics.V2502_Polymer_Processor/P510.xaml
+++ b/Prevu.Synoptics.V2502_Polymer_Processor/P510.xaml
@@ -117,7 +117,7 @@
         </Labels:Pipe>
         <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="53" Color="Water" StatusComponent="508-01-MA1" VisibilityComponent="" Canvas.Left="137" Canvas.Top="586"/>
         <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="104" Color="Water" StatusComponent="508-01-MA1" VisibilityComponent="" Canvas.Left="137" Canvas.Top="657"/>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="76" Color="Water" StatusComponent="508-01-MA1" VisibilityComponent="" RenderTransformOrigin="0.5,0.5" Canvas.Left="101" Canvas.Top="621">
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Center" Width="74" Color="Water" StatusComponent="508-01-MA1" VisibilityComponent="" RenderTransformOrigin="0.5,0.5" Canvas.Left="102" Canvas.Top="622">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -316,9 +316,9 @@
         <Labels:DeviceLabel HorizontalAlignment="Center" 
 		VerticalAlignment="Top" 
 		ComponentName="510-01-YA1" RenderTransformOrigin="0.567,-2.17" Canvas.Left="664" Canvas.Top="290"/>
-        <Labels:DeviceLabel HorizontalAlignment="Center" 
-            VerticalAlignment="Top" 
-            ComponentName="508-41-LT1" RenderTransformOrigin="0.567,-2.17" Canvas.Left="271" Canvas.Top="573"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" 
+            VerticalAlignment="Center" 
+            ComponentName="508-41-LT1" RenderTransformOrigin="0.567,-2.17" Canvas.Left="401" Canvas.Top="573"/>
         <Labels:DeviceLabel HorizontalAlignment="Center" 
             VerticalAlignment="Top" 
             ComponentName="510-21-CV1" RenderTransformOrigin="0.567,-2.17" Canvas.Left="273" Canvas.Top="234"/>
@@ -343,9 +343,9 @@
         <Labels:DeviceLabel HorizontalAlignment="Center" 
             VerticalAlignment="Top" 
             ComponentName="508-01-MA1" RenderTransformOrigin="0.567,-2.17" Canvas.Left="331" Canvas.Top="718"/>
-        <Labels:DeviceLabel HorizontalAlignment="Center" 
-            VerticalAlignment="Top" 
-            ComponentName="508-21-CV1" RenderTransformOrigin="0.567,-2.17" Canvas.Left="271" Canvas.Top="504"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" 
+            VerticalAlignment="Center" 
+            ComponentName="508-21-CV1" RenderTransformOrigin="0.567,-2.17" Canvas.Left="401" Canvas.Top="504"/>
         <Labels:DetailsLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="510-VLV" DetailsPageName="D510" Canvas.Left="606" Canvas.Top="125"/>
         <Labels:JumpLabel HorizontalAlignment="Center" 
                       VerticalAlignment="Top" 
