V3510-ADDED 810-MIX-SILOS

--- a/Prevu.Synoptics.V3510_Greentech_Romania/P810.xaml
+++ b/Prevu.Synoptics.V3510_Greentech_Romania/P810.xaml
@@ -246,8 +246,8 @@
     <Labels:DeviceLabel HorizontalAlignment="Center" 
             VerticalAlignment="Center" 
             ComponentName="848-71-ECS1" Canvas.Left="1214" Canvas.Top="636" />
-    <Labels:DetailsLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="810-VIEW" DetailsPageName="D810" HideComponentName="True" Canvas.Left="457" Canvas.Top="445" />
-    <Labels:DetailsLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="820-VIEW" DetailsPageName="D820" HideComponentName="True" Canvas.Left="875" Canvas.Top="266"/>
+    <Labels:DetailsLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="810-VIEW" DetailsPageName="D810" Canvas.Left="290" Canvas.Top="334" />
+    <Labels:DetailsLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="820-VIEW" DetailsPageName="D820" Canvas.Left="709" Canvas.Top="158"/>
     <Labels:JumpLabel HorizontalAlignment="Left" 
             VerticalAlignment="Center" 
             JumpFromLabel="810-01-MA1" 
@@ -267,5 +267,7 @@
       </Machines:VRC_WaterCollectingTank.RenderTransform>
     </Machines:VRC_WaterCollectingTank>
     <Labels:DetailsLabel ComponentName="896-FILTER" DetailsPageName="D896" Canvas.Left="1181" Canvas.Top="151" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Labels:DeviceLabel 
+      ComponentName="810-MIX-SILOS" Canvas.Left="479" Canvas.Top="267" HorizontalAlignment="Left" VerticalAlignment="Center"/>
   </Canvas>
 </UserControl>
