v3510-SMALL CHANGE ON PIPES

--- a/Prevu.Synoptics.V3510_Greentech_Romania/P766.xaml
+++ b/Prevu.Synoptics.V3510_Greentech_Romania/P766.xaml
@@ -182,7 +182,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="187" RenderTransformOrigin="0.5,0.5" StatusComponent="788-01-MA1" PipeHeight="Medium" Height="26"  VisibilityComponent="808-22-CV1" Canvas.Left="903" Canvas.Top="504">
+    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="187" RenderTransformOrigin="0.5,0.5" StatusComponent="788-01-MA1" PipeHeight="Medium" Height="26"  VisibilityComponent="808-22-CV1" Canvas.Left="903" Canvas.Top="504" VisibilitySignal="LS1">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -202,7 +202,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="340" RenderTransformOrigin="0.5,0.5" StatusComponent="788-01-MA1" PipeHeight="Medium" Height="26"   VisibilityComponent="808-22-CV1" Canvas.Left="917" Canvas.Top="338">
+    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="340" RenderTransformOrigin="0.5,0.5" StatusComponent="788-01-MA1" PipeHeight="Medium" Height="26"   VisibilityComponent="808-22-CV1" Canvas.Left="917" Canvas.Top="338" VisibilitySignal="LS1">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -212,7 +212,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="104" RenderTransformOrigin="0.5,0.5" StatusComponent="788-01-MA1" PipeHeight="Medium" Height="26" VisibilityComponent="808-22-CV1" Canvas.Left="1083" Canvas.Top="171">
+    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="104" RenderTransformOrigin="0.5,0.5" StatusComponent="788-01-MA1" PipeHeight="Medium" Height="26" VisibilityComponent="808-22-CV1" Canvas.Left="1083" Canvas.Top="171" VisibilitySignal="LS1">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -389,6 +389,6 @@
       FontSize="36" Foreground="Black" FontWeight="Bold" HorizontalAlignment="Left" Canvas.Left="126" Canvas.Top="360" VerticalAlignment="Center" RenderTransformOrigin="-5.298,5.68"><Run Language="it-it" Text="S910"/><LineBreak/><Run/></TextBlock>
     <TextBlock TextWrapping="Wrap" 
       Height="50" Width="94" TextAlignment="Center" 
-      FontSize="36" Foreground="Black" FontWeight="Bold" Canvas.Left="126" Canvas.Top="430" RenderTransformOrigin="-5.298,5.68" HorizontalAlignment="Left" VerticalAlignment="Center"><Run Text="S91"/><Run Language="it-it" Text="1"/><LineBreak/><Run/></TextBlock>
+      FontSize="36" Foreground="Black" FontWeight="Bold" Canvas.Left="126" Canvas.Top="434" RenderTransformOrigin="-5.298,5.68" HorizontalAlignment="Center" VerticalAlignment="Top"><Run Text="S91"/><Run Language="it-it" Text="1"/><LineBreak/><Run/></TextBlock>
   </Canvas>
 </UserControl>
